--- a/css/query.css
+++ b/css/query.css
@@ -136,9 +136,9 @@
     overflow-x: auto;
   }
 
-  .works-slide::-webkit-scrollbar {
+  /* .works-slide::-webkit-scrollbar {
     display: none;
-  }
+  } */
   /*********************************/
   /* FOOTER  SECTION */
   /*********************************/
