--- a/css/query.css
+++ b/css/query.css
@@ -133,7 +133,7 @@
   /*********************************/
   .works-slide {
     gap: 1.6rem;
-    overflow-x: auto;
+    /* overflow-x: auto; */
   }
 
   /* .works-slide::-webkit-scrollbar {
